Fixed z-index on CC version number

--- a/styles.css
+++ b/styles.css
@@ -223,6 +223,7 @@
 .cleanUI #topBar,
 .cleanUI #support { display: none; }
 .cleanUI #versionNumber {
+	z-index: 20;
 	bottom: auto;
 	top: 0;
 }
